--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				$("#rect1").on("swipeleft",function(){
 					w=randNum(50);
 					h=randNum(500);
-					$(this).animate({'width':w,'height':h},slow);
+					$(this).animate({'width':w,'height':h},200);
 					});
 					$("#rect1").on("swiperight",function(){
 					w=randNum(500);
